[gd_scene load_steps=6 format=2]

[ext_resource path="res://img/enemigo.png" type="Texture" id=1]
[ext_resource path="res://Objetos/Personajes/Enemigo/Enemigo.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=5]
radius = 8.0

[sub_resource type="CanvasItemMaterial" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 9 )

[node name="Enemigo" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.709804, 0.129412, 0.129412, 1 )
material = SubResource( 4 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="temporizador" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[node name="sensores" type="Node2D" parent="."]

[node name="pseudo_vision" type="Area2D" parent="sensores"]
collision_layer = 17
collision_mask = 17

[node name="vision" type="CollisionPolygon2D" parent="sensores/pseudo_vision"]
position = Vector2( -0.18749, 0 )
scale = Vector2( 1.37981, 9.125 )
polygon = PoolVector2Array( 86, -5, 0, 0, 86, 5, 130, 0 )

[node name="maquina_estados" type="Node" parent="."]

[node name="quieto" type="Node" parent="maquina_estados"]

[node name="investigar" type="Node" parent="maquina_estados"]

[node name="perseguir" type="Node" parent="maquina_estados"]

[node name="atacar" type="Node" parent="maquina_estados"]

[node name="patrullar" type="Node" parent="maquina_estados"]

[node name="paralizado" type="Node" parent="maquina_estados"]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
